--- a/P1/S1/hola_mundo.html
+++ b/P1/S1/hola_mundo.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <!-- Esto es un comentario -->
 
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Ejemplo HTML5</title>
-  </head>
+<!-- Esto es
+otro comentario
+pero en varias
+líneas  -->
 
-  <body>
-    <h1>Capítulo 1</h1>
-    <p>En un lugar de la URJC...</p>
-  </body>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Ejemplo HTML</title>
+    </head>
+    <body>
+        <h1>Capítulo 1</h1>
+        <p>En un lugar de la URJC...</p>
+        <p>Añadiendo un párrafo nuevo</p>
+    </body>
 </html>
