--- a/P1/S1/hola_mundo2.html
+++ b/P1/S1/hola_mundo2.html
@@ -7,7 +7,7 @@
     <title>Hola Mundo 2</title>
 </head>
 <body>
-    <h1>Sesión de Laboratorio 2</h1>
-    <p>Hola mundo 2!</p>
+    <h1>Capitulo 2</h1>
+    <p>Segundo hola mundo</p>
 </body>
 </html>
