--- a/P1/S2/03-listas.html
+++ b/P1/S2/03-listas.html
@@ -12,8 +12,7 @@
         <li>Conectarse al servidor</li>
         <li>Solicitar documento</li>
         <li>Esperar respuesta</li>
-        <p>Algo de texto</p>
-        <li>Mostrar documento</li>
+        <li>Solicitud aceptada</li>
     </ol>
     <h2>Lista no ordenada. Comprar:</h2>
     <h3>Un nivel más bajo h3</h3>
@@ -21,8 +20,7 @@
         <li>Leche</li>
         <li>Café</li>
         <li>Pan</li>
-        <li>Huevos</li>
-        <li>Chocolate con almendras</li>
+        <li>Cereales</li>
     </ul>
 </body>
 </html>
