--- a/P1/S2/07-imagen.html
+++ b/P1/S2/07-imagen.html
@@ -9,6 +9,6 @@
 <body>
     <h2>Universidad Rey Juan Carlos</h2>
     <img src="Logo-urjc.png" alt="Imagen: Logo-urjc">
-    <p>Ejemplo de colocar una imagen</p>
+    <p>Como colocar una imagen</p>
 </body>
 </html>
