--- a/P1/S2/09-grupos.html
+++ b/P1/S2/09-grupos.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ej-8: Grupos</title>
 </head>
 <body>
-    <ol>
-        <li><a href="https://jesusgpa.github.io/2021-2022-CSAAI-Practicas/P1/S2/Encabezados.html">Encabezados</a></li>
-    </ol>
-    
+    <h2 class="Grupo 1" id="E1">Encabezado</h2>
+    <div class="Grupo 1" id="P1">
+        Primera sección
+    </div>
+    <div id="P2">
+        Segunda sección
+    </div>
+    <p> Párrafo</p>
 </body>
 </html>
