--- a/P1/S2/04-tablas.html
+++ b/P1/S2/04-tablas.html
@@ -12,29 +12,21 @@
             <th>Nombre</th>
             <th>Apellidos</th>
             <th>Descripción</th>
-            <th>Edad</th>
         </tr>
         <tr>
             <td>Chuck</td>
             <td>Norris</td>
             <td>Creó a Dios</td>
-            <td>2.000</td>
         </tr>
         <tr>
             <td>Trollface</td>
-            <td>....</td>
-            <td>Eres un troll</td>
+            <td>...</td>
+            <td>Troliado</td>
         </tr>
         <tr>
             <td>Ecce</td>
             <td>Homo</td>
             <td>Genialidad artística</td>
-        </tr>
-        <tr>
-            <td>Jesús</td>
-            <td>Parrado</td>
-            <td>Profe</td>
-            <td>uff</td>
         </tr>
     </table>
 </body>
