--- a/P1/S2/index.html
+++ b/P1/S2/index.html
@@ -9,14 +9,14 @@
 <body>
 <h1>Indice de ejemplos</h1>
 <ol>
-    <li><a href="https://github.com/lplaaza/2022-2023-CSAAI-Practicas/blob/main/P1/S2/01-encabezados.html">Encabezados</a></li>
-    <li><a href="https://github.com/lplaaza/2022-2023-CSAAI-Practicas/blob/main/P1/S2/02-parrafos.html">Párrafos</a></li>
-    <li><a href="https://github.com/lplaaza/2022-2023-CSAAI-Practicas/blob/main/P1/S2/03-listas.html">Listas</a></li>
-    <li><a href="https://github.com/lplaaza/2022-2023-CSAAI-Practicas/blob/main/P1/S2/04-tablas.html">Tablas</a></li>
-    <li><a href="https://github.com/lplaaza/2022-2023-CSAAI-Practicas/blob/main/P1/S2/05-botones.html">Botones</a></li>
-    <li><a href="https://github.com/lplaaza/2022-2023-CSAAI-Practicas/blob/main/P1/S2/06-enlaces.html">Enlaces</a></li>
-    <li><a href="https://github.com/lplaaza/2022-2023-CSAAI-Practicas/blob/main/P1/S2/07-imagen.html">Imagen</a></li>
-    <li><a href="https://github.com/lplaaza/2022-2023-CSAAI-Practicas/blob/main/P1/S2/08-secciones.html">Secciones</a></li>
-    <li><a href="https://github.com/lplaaza/2022-2023-CSAAI-Practicas/blob/main/P1/S2/09-grupos.html">Grupos</a></li>
+    <li><a href="https://lplaaza.github.io/2022-2023-CSAAI-Practicas/P1/S2/01-encabezados.html">Encabezados</a></li>
+    <li><a href="https://lplaaza.github.io/2022-2023-CSAAI-Practicas/P1/S2/02-parrafos.html">Párrafos</a></li>
+    <li><a href="https://lplaaza.github.io/2022-2023-CSAAI-Practicas/P1/S2/03-listas.html">Listas</a></li>
+    <li><a href="https://lplaaza.github.io/2022-2023-CSAAI-Practicas/P1/S2/04-tablas.html">Tablas</a></li>
+    <li><a href="https://lplaaza.github.io/2022-2023-CSAAI-Practicas/P1/S2/05-botones.html">Botones</a></li>
+    <li><a href="https://lplaaza.github.io/2022-2023-CSAAI-Practicas/P1/S2/06-enlaces.html">Enlaces</a></li>
+    <li><a href="https://lplaaza.github.io/2022-2023-CSAAI-Practicas/P1/S2/07-imagen.html">Imagen</a></li>
+    <li><a href="https://lplaaza.github.io/2022-2023-CSAAI-Practicas/P1/S2/08-secciones.html">Secciones</a></li>
+    <li><a href="https://lplaaza.github.io/2022-2023-CSAAI-Practicas/P1/S2/09-grupos.html">Grupos</a></li>
 </ol>
 </body>
