--- a/P1/CV/index.html
+++ b/P1/CV/index.html
@@ -62,7 +62,7 @@
     </leftcolumn>
 
     <rightcolumn>
-        <h1 ALIGN="center">Son Goku<img src="goku.png" alt="goku" width="160" height="120" ALING="right">
+        <h1>Son Goku<img src="goku.png" alt="goku" width="160" height="120" ALING="right">
         </h1>
         <h2>UN POCO SOBRE MI</h2>
         <div>
