--- a/P1/CV/index.html
+++ b/P1/CV/index.html
@@ -82,7 +82,7 @@
             <li>Volar</li>
             <li>Tecnica cuerpo a cuerpo de artes marciales</li>
         <h2>UN VIDEO SOBRE MI EVOLUCION</h2>
-        <div class="marco2"ALIGN="center">
+        <div class="marco2">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/qmLIFlW2GaE" title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
