--- a/P1/CV/index.html
+++ b/P1/CV/index.html
@@ -73,14 +73,16 @@
         <p>Cuando mi abuelo me dejó, recorrí el mundo conociento gente de todo tipo, uno de ellos fue mi primero maestro, Roshi, quien me enseño diversas técnicas de artes marciales y de control de la energía que llamamos "ki". Cuando ya fui más mayor descubrí que supervivientes de mi raza venían a la Tierra a destruirnos pero gracias a todo lo aprendido a lo largo de los años, mis amigos y yo conseguimos juntos vencerles e incluso aliarnos con uno de ellos, que nos ayudaría más adelante a defender el planeta de las amenazas.</p>
     </div>
     <h2>HABILIDADES</h2> 
-        <li>Transformación en super saiyan y consecuentes</li>
-        <li>Kamehameha</li>
-        <li>Teletransportación</li>
-        <li>Genkidama</li>
-        <li>Kaioken</li>
-        <li>Ultra instinto</li>
-        <li>Volar</li>
-        <li>Tecnica cuerpo a cuerpo de artes marciales</li>
+        <div>
+            <li>Transformación en super saiyan y consecuentes</li>
+            <li>Kamehameha</li>
+            <li>Teletransportación</li>
+            <li>Genkidama</li>
+            <li>Kaioken</li>
+            <li>Ultra instinto</li>
+            <li>Volar</li>
+            <li>Tecnica cuerpo a cuerpo de artes marciales</li>
+        </div>
     <h2>UN VIDEO SOBRE MI EVOLUCION</h2>
     <div class="marco2">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/qmLIFlW2GaE" title="YouTube video player" frameborder="0"
