--- a/P2/index.html
+++ b/P2/index.html
@@ -10,4 +10,38 @@
     <title>Boom</title>
 </head>
 
+<body>
+    <div class="tiempo">
+        <div>
+            <p id="display">0:0:0</p>
+        </div>
+    
+    <div id="panel">
+        <p id="n1" class="codigo">*</p>
+        <p id="n2" class="codigo">*</p>
+        <p id="n3" class="codigo">*</p>
+        <p id="n4" class="codigo">*</p>
+    </div>
+
+    <div id="teclado">
+        <button type="button" id="tecla1" class="numero" value="1">1</button>
+        <button type="button" id="tecla2" class="numero" value="2">2</button>
+        <button type="button" id="tecla3" class="numero" value="3">3</button>
+        <br>
+        <button type="button" id="tecla4" class="numero" value="4">4</button>
+        <button type="button" id="tecla5" class="numero" value="5">5</button>
+        <button type="button" id="tecla6" class="numero" value="6">6</button>
+        <br>
+        <button type="button" id="tecla7" class="numero" value="7">7</button>
+        <button type="button" id="tecla8" class="numero" value="8">8</button>
+        <button type="button" id="tecla9" class="numero" value="9">9</button>
+        <br>
+        <button type="button" id="tecla0" class="numero" value="0">0</button>
+        <br>
+        <button type="button" id="start" class="control" onclick=iniciar()>Start</button>
+        <button type="button" id="stop" class="control">Stop</button>
+        <button type="button" id="reset" class="control" onclick=iniciar()>Reset</button>
+    </div>
+    </div>
+</body>
 </html>
