--- a/P2/index.html
+++ b/P2/index.html
@@ -38,9 +38,9 @@
         <br>
         <button type="button" id="tecla0" class="numero" value="0">0</button>
         <br>
-        <button type="button" id="start" class="control" onclick=iniciar()>Start</button>
+        <button type="button" id="start" class="control">Start</button>
         <button type="button" id="stop" class="control">Stop</button>
-        <button type="button" id="reset" class="control" onclick=iniciar()>Reset</button>
+        <button type="button" id="reset" class="control">Reset</button>
     </div>
     </div>
 </body>
