--- a/P4/index.html
+++ b/P4/index.html
@@ -19,13 +19,13 @@
                 </div>
             </div>
             <div class="grid-container">
-                <div class="tablero" grid-dimension="4">
+                <div class="tablero" grid-dimension="2">
                     <div class="card">
                         <div class="card-front"></div>
                         <div class="card-back">🍍</div>
                     </div>
                 </div>
-                <div class="win">¡Has Ganado!</div>
+                <div class="win"></div>
             </div>
         </div>
     </body>
